2004-03-14  Bert Driehuis <driehuis@playbeing.org>
	* extras/lcd/lcdengine.cc, extras/lcd/lcd.h, extras/lcd/examples/lcd.asm:
	Fixed the LCD modules "E" logic. 

2004-03-13 Robert Pearce
	* src/16f87x.cc, src/16f87x.h, src/pic-processor.cc, src/pic-processor.h:
	Added 16f871.

2004-03-09 Scott Dattalo  <scott@dattalo.com>
	* src/16bit-instructions.cc, src/trace.cc:
	Addresses displayed for the 18F devices are now displayed properly.

2004-03-09 Scott Dattalo  <scott@dattalo.com>
	* src/14bit-processor.cc:
	PCL (low byte of program counter) was one count too large.
	
2004-03-09 Scott Dattalo  <scott@dattalo.com>
	* src/processor.cc, src/processor.h, src/pic-processor.cc, src/pic-processor.h:
	Moved the implementations of the disasm() and list() methods from the 
	pic_processor class to the processor class.

2004-03-09 Scott Dattalo  <scott@dattalo.com>
	* src/pic-instructions.h, src/12bit-instructions.h, src/stimuli.h,
	src/14bit-instructions.h, src/14bit-instructions.h, src/16bit-instructions.h,
	src/16bit-instructions.cc: changed references of pic-processor to Processor.

2004-03-08 Scott Dattalo  <scott@dattalo.com>
	* modules/push_button.cc, modules/push_button.h: new module
	from Carlos Ghirardelli.

2004-03-04 Scott Dattalo  <scott@dattalo.com>
	* src/register.h, src/pic-register.h, src/pic-processor.h,
	src/pic-processor.cc, src/14bit-registers.cc
	Removed the "file_register" class. Moved the sfr_register class to register.h.

2004-03-04 Scott Dattalo  <scott@dattalo.com>
	* src/processor.h, src/processor.cc, src/cod.cc:
	Added the new meber 'Find()' to the 'Files' class.

2004-03-03  Bert Driehuis <driehuis@playbeing.org>
	* /extras/rs232-gen/rs232.c:  Now compiles under BSD

2004-03-03 Scott Dattalo  <scott@dattalo.com>
	* gui/gui_profile.cc, gui/gui_src_asm.cc, src/cod.cc,
	src/icd.cc, src/pic-processor.cc, src/processor.cc, src/processor.h
	Removed references to "processor_id". Changed name of _Files to Files
	in the Processor class.
