@@ -239,7 +239,7 @@ enum State {
 };
 
 
-class LcdDisplay : public ExternalModule
+class LcdDisplay : public Module
 {
 public:
 
@@ -361,7 +361,7 @@ public:
 
   // Inheritance from Module class
   const virtual char *type(void) { return ("lcd_display"); };
-  static ExternalModule *construct(const char *new_name);
+  static Module *construct(const char *new_name);
 
 
   // State Machine Functions:
@@ -412,7 +412,7 @@ public:
 
   // Inheritance from Module class
   const virtual char *type(void) { return ("lcd_dt161A"); };
-  static ExternalModule *construct(const char *new_name);
+  static Module *construct(const char *new_name);
 
 };
 
